# zorigin

./: .gitignore  README.md
.github/workflows/: release.yml
android/app/src/main/java/com/zap/transfer/: MainActivity.kt  NativeBridge.kt  ZapService.kt
android/app/src/main/res/layout/: activity_main.xml
crates/zap-android/src/: lib.rs
crates/zap-cli/src/: main.rs
crates/zap-core/src/web/: index.html  mod.rs
crates/zap-desktop/src/: main.rs
docs/: fast-lane-protocol.md  restructure-handoff.md  roadmap.md
docs/apps/: README.md  START-HERE.md  zap.md  zeus.md  zod.md  zulu-brief.md  zulu.md
networking/: Cargo.toml  README.md
networking/android/zap/: settings.gradle.kts
networking/android/zap/app/: build.gradle.kts
networking/android/zap/app/src/androidTest/java/com/zap/transfer/: ExampleInstrumentedTest.kt
networking/android/zap/app/src/main/: AndroidManifest.xml
networking/android/zap/app/src/main/java/com/zap/transfer/: MainActivity.kt  NativeBridge.kt  ZapService.kt
networking/android/zap/app/src/main/res/drawable/: btn_outline.xml  btn_primary.xml  card_bg.xml  ic_copy.xml  ic_launcher_foreground.xml  ic_share.xml  logo_tile.xml  warn_bg.xml
networking/android/zap/app/src/main/res/layout/: activity_main.xml  transfer_row.xml
networking/android/zap/app/src/main/res/values/: themes.xml
networking/android/zap/app/src/main/res/values-night/: themes.xml
networking/android/zap/app/src/main/res/xml/: file_paths.xml
networking/android/zap/app/src/test/java/com/zap/transfer/: ExampleUnitTest.kt
networking/android/zap/gradle/wrapper/: gradle-wrapper.properties
networking/android/zulu/app/src/main/: AndroidManifest.xml
networking/android/zulu/app/src/main/java/com/zulu/sync/: ImageClip.kt  ShareActivity.kt
networking/android/zulu/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
networking/android/zulu/app/src/main/res/values/: colors.xml  strings.xml
networking/crates/zap-android/: Cargo.toml
networking/crates/zap-android/src/: lib.rs
networking/crates/zap-cli/: Cargo.toml
networking/crates/zap-cli/src/: cli.rs  main.rs
networking/crates/zap-desktop/: Cargo.toml
networking/crates/zap-desktop/assets/: icon.icns
networking/crates/zap-desktop/src/: main.rs
networking/crates/znet-core/: Cargo.toml
networking/crates/znet-core/src/: lib.rs
networking/crates/znet-core/src/transport/: adb.rs  mod.rs
networking/crates/znet-core/src/web/: events.rs  fast.rs  fast_client.rs  fast_tls.rs  index.html  login.html  mod.rs  tls.rs
networking/crates/zulu-desktop/: Cargo.toml
networking/crates/zulu-desktop/assets/: icon.icns
networking/crates/zulu-desktop/src/: imageclip.rs  main.rs  sync.rs  tlsclient.rs  zulu.html
scripts/: build-dist.sh
site/: index.html  privacy.html  product.css
site/download/: README.md
site/zap/: index.html
site/zeta/: index.html
site/zeus/: index.html
site/zod/: index.html
site/zulu/: index.html
