[package]
name = "zap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for zap (macOS/desktop)"

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
qrcode.workspace = true
znet-core.workspace = true
