[package]
name = "znet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared networking engine (LAN web transport) for zOrigin apps: Zap and future networking products"

[lib]
name = "znet_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
tiny_http.workspace = true
socket2.workspace = true
