[package]
name = "znet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared networking engine (LAN web transport) for zOrigin apps: Zap and future networking products"

[lib]
name = "znet_core"
path = "src/lib.rs"

[features]
# Optional end-to-end encryption (native <-> native): a self-signed TLS server
# via tiny_http's rustls backend, plus cert generation + fingerprint. Off by
# default so the core stays tiny and the no-app browser receiver keeps working
# over plain HTTP.
tls = ["tiny_http/ssl-rustls", "dep:rcgen", "dep:sha2"]

[dependencies]
anyhow.workspace = true
tiny_http.workspace = true
socket2.workspace = true
rcgen = { version = "0.13", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
# The pinning client used by the TLS integration test (independent of
# tiny_http's internal rustls 0.20; they only exchange PEM/DER bytes).
rustls = "0.23"
