[package]
name = "znet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared networking engine (LAN web transport) for zOrigin apps: Zap and future networking products"

[lib]
name = "znet_core"
path = "src/lib.rs"

[features]
# Optional end-to-end encryption (native <-> native): a self-signed TLS server
# via tiny_http's rustls backend for the HTTP path, plus a rustls server/client
# for the custom fast lane, cert generation + fingerprint. Off by default so the
# core stays tiny and the no-app browser receiver keeps working over plain HTTP.
tls = ["tiny_http/ssl-rustls", "dep:rcgen", "dep:sha2", "dep:rustls"]

[dependencies]
anyhow.workspace = true
tiny_http.workspace = true
socket2.workspace = true
rcgen = { version = "0.13", optional = true }
sha2 = { version = "0.10", optional = true }
# Used (under `tls`) both by the fast-lane TLS server/client and by the pinning
# client in the TLS integration test. Independent of tiny_http's internal rustls
# 0.20 - they only exchange PEM/DER bytes. `ring` provider to match the app and
# build without nasm/cmake.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
