[package]
name = "zulu-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop app for Zulu - clipboard / link / snippet sync over the LAN"

[[bin]]
name = "zulu-desktop"
path = "src/main.rs"

[dependencies]
znet-core.workspace = true
anyhow.workspace = true
qrcode.workspace = true
eframe = "0.29"
dirs = "5"
# Cross-platform OS clipboard read/write. Reading the clipboard is not in std;
# egui can only read via paste events, so Zulu needs a real clipboard crate to
# poll for local copies on desktop.
arboard = "3"
# PNG encode/decode for small clipboard-image sync (PNG only keeps the build lean;
# arboard already pulls image transitively for its own image-data support).
image = { version = "0.25", default-features = false, features = ["png"] }

[package.metadata.bundle]
name = "Zulu"
identifier = "com.zulu.sync"
short_description = "Clipboard sync over your local Wi-Fi"
category = "public.app-category.utilities"
