[package]
name = "zulu-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop app for Zulu - clipboard / link / snippet sync over the LAN"

[[bin]]
name = "zulu-desktop"
path = "src/main.rs"

[dependencies]
# `tls` enables optional native<->native encryption (self-signed HTTPS host).
znet-core = { workspace = true, features = ["tls"] }
anyhow.workspace = true
qrcode.workspace = true
eframe = "0.29"
dirs = "5"
# TLS client with fingerprint pinning (the join side of encrypted sync). The
# `ring` provider (not aws-lc-rs) builds cleanly on every CI runner without
# nasm/cmake, and matches tiny_http's rustls backend.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
sha2 = "0.10"
# Cross-platform OS clipboard read/write. Reading the clipboard is not in std;
# egui can only read via paste events, so Zulu needs a real clipboard crate to
# poll for local copies on desktop.
arboard = "3"
# Image codecs for small clipboard-image sync: PNG (what the desktop encodes)
# plus JPEG so it can also decode photos shared from the Android app.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[package.metadata.bundle]
name = "Zulu"
identifier = "com.zulu.sync"
short_description = "Clipboard sync over your local Wi-Fi"
category = "public.app-category.utilities"
icon = ["assets/icon.icns", "assets/icon_1024.png"]
